--- a/css/styles.css
+++ b/css/styles.css
@@ -165,3 +165,13 @@ button:hover {
     padding-left: 5px;
     font-family: 'Poppins';
 }
+
+#contcred {
+    font-family: 'Poppins';
+    display: none;
+
+}
+
+#titulocred{
+    font-size: 25px;
+}
