--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ button:hover {
 }
 
 #corpopng {
-    width: 20%;
+    width: 19%;
     height: 40%;
     position: absolute;
     padding-top: 55px;
@@ -96,16 +96,16 @@ button:hover {
 
 #corpopng2 {
     position: absolute;
-    width: 20%;
+    width: 21%;
     height: 40%;
-    padding-left: 1050px;
-    padding-top: 200px;
+    right: 2%;
+    top: 20%;
 }
 
 #corpopng3 {
     position: absolute;
-    width: 20%;
-    height: 90%;
+    width: 17%;
+    height: 75%;
     padding-top: 500px;
 
 }
