--- a/css/styles.css
+++ b/css/styles.css
@@ -87,26 +87,27 @@ button:hover {
 }
 
 #corpopng {
-    width: 19%;
+    width: 21%;
     height: 40%;
     position: absolute;
-    padding-top: 55px;
-    padding-left: 50px;
+    left: 4%;
+    top: 9%;
 }
 
 #corpopng2 {
     position: absolute;
-    width: 21%;
-    height: 40%;
-    right: 2%;
-    top: 20%;
+    width: 20%;
+    height: 37%;
+    right: 4%;
+    top: 40%;
 }
 
 #corpopng3 {
     position: absolute;
-    width: 17%;
-    height: 75%;
-    padding-top: 500px;
+    width: 15%;
+    height: 65%;
+    top: 70%;
+    left: 2%;
 
 }
 
